# eit-django-71963

./: .gitignore  README.md  pyproject.toml
docs/: README.md  django.md  entornos-virtuales.md
project/: db.sqlite3
project/clientes/: admin.py  models.py  urls.py  views.py
project/clientes/migrations/: 0001_initial.py  0002_cliente_dni.py  0003_alter_cliente_pais_origen.py
project/clientes/templates/clientes/: cliente_list.html  index.html  notas.html  pais_list.html
project/config/: settings.py  urls.py  views.py
project/core/: forms.py  urls.py  views.py
project/core/templates/core/: base.html  index-tmp.html  index.html  login.html  logout.html  profile.html  register.html
project/core/templates/core/components/: card.html  footer.html  navbar.html
project/productos/: admin.py  forms.py  models.py  urls.py  views.py
project/productos/migrations/: 0001_initial.py  0002_alter_productocategoria_options_and_more.py  0003_rename_decripcion_productocategoria_descripcion.py  0004_producto.py
project/productos/templates/productos/: index.html  productocategoria_confirm_delete.html  productocategoria_create.html  productocategoria_detail.html  productocategoria_form.html  productocategoria_list.html
project/venta/: admin.py  models.py
project/venta/migrations/: 0001_initial.py
